@startuml
title Wifi Feature Class Diagram

' 패키지로 묶어 가독성 향상

  ' --- 클래스 및 인터페이스 정의 ---

  class MainActivity3 {
    + onCreate()
  }

  class WifiTestFragment3 {
    - adapter: WifiAdapter3
    - wifiTest: WifiTest3
    + onViewCreated()
    + showWifiDialog()
    + onItemClick()
  }

  class WifiTest3 {
    + scanWifi()
    + connectWifi()
  }

  class WifiAdapter3 {
    - listener: OnItemClickListener
    + onCreateViewHolder()
    + onBindViewHolder()
  }

  ' 어댑터 내부에 클릭 리스너 인터페이스 정의
  interface OnItemClickListener {
    + onItemClick(position: int)
  }

  class WifiScanDialog3 {
    + onCreateDialog()
  }


  ' --- 관계 정의 ---

  ' MainActivity3는 WifiTestFragment3를 호스팅합니다. (Composition)
  MainActivity3 "1" *-- "1" WifiTestFragment3 : hosts

  ' WifiTestFragment3는 WifiAdapter3를 생성하고 소유합니다. (Composition)
  WifiTestFragment3 "1" *-- "1" WifiAdapter3 : creates & owns

  ' WifiTestFragment3는 WifiTest3 클래스를 사용하여 비즈니스 로직을 처리합니다. (Association)
  WifiTestFragment3 --> WifiTest3 : uses

  ' WifiTestFragment3는 사용자가 항목을 클릭하면 WifiScanDialog3를 보여줍니다. (Dependency)
  WifiTestFragment3 ..> WifiScanDialog3 : shows

@enduml
